# Services

./: README.md
Fiqh_Agentic_RAG_Api/fiqh_agentic_rag_api/: .gitignore  README.md  docker-compose.yaml  ingest.py  pyproject.toml
Fiqh_Agentic_RAG_Api/fiqh_agentic_rag_api/fiqh_agentic_rag_api_qdrant_storage/: raft_state.json
Fiqh_Agentic_RAG_Api/fiqh_agentic_rag_api/fiqh_agentic_rag_api_qdrant_storage/collections/fiqh_knowladge_base/0/: newest_clocks.json  replica_state.json
Fiqh_Agentic_RAG_Api/fiqh_agentic_rag_api/fiqh_agentic_rag_api_qdrant_storage/collections/fiqh_knowladge_base/0/segments/0f6e2ee0-14de-42d6-a328-fa437fdd94dc/: mutable_id_tracker.mappings
Fiqh_Agentic_RAG_Api/fiqh_agentic_rag_api/fiqh_agentic_rag_api_qdrant_storage/collections/fiqh_knowladge_base/0/wal/: first-index
Fiqh_Agentic_RAG_Api/fiqh_agentic_rag_api/qdrant_storage/: raft_state.json
Fiqh_Agentic_RAG_Api/fiqh_agentic_rag_api/qdrant_storage/collections/fiqh_knowladge_base/0/: newest_clocks.json  replica_state.json
Fiqh_Agentic_RAG_Api/fiqh_agentic_rag_api/qdrant_storage/collections/fiqh_knowladge_base/0/segments/399b1d80-160f-4f0d-94f7-ae6977c36a5d/: segment.json  (+2 more)
Fiqh_Agentic_RAG_Api/fiqh_agentic_rag_api/qdrant_storage/collections/fiqh_knowladge_base/0/wal/: first-index
Fiqh_Agentic_RAG_Api/fiqh_agentic_rag_api/src/fiqh_agentic_rag_api/: crew.py  main.py  quick_test.py
Fiqh_Agentic_RAG_Api/fiqh_agentic_rag_api/src/fiqh_agentic_rag_api/config/: agents.yaml  tasks.yaml
Fiqh_Agentic_RAG_Api/fiqh_agentic_rag_api/src/fiqh_agentic_rag_api/tools/: __init__.py  custom_tool.py
(+30 files in other folders)
